--- a/atharva_theme_general/views/custom_templates_inherit.xml
+++ b/atharva_theme_general/views/custom_templates_inherit.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
     <template id="website_sale.products_description" inherit_id="website_sale.products_item" active="False" customize_show="True" name="Product Description">
-        <xpath expr="//*[hasclass('product_price')]" position="after">
-            <div class="oe_subdescription" contenteditable="false">
+<!--        <xpath expr="//*[hasclass('product_price')]" position="after">-->
+<!--            <div class="oe_subdescription" contenteditable="false">-->
 <!--                <div itemprop="description" t-field="product.description_sale"/>-->
+<!--            </div>-->
+<!--        </xpath>-->
+        <xpath expr="//*[hasclass('o_wsale_products_item_title')]" position="before">
+            <div class="oe_subdescription" contenteditable="false">
                 <div itemprop="name" t-field="product.product_brand_id"/>
             </div>
         </xpath>
