--- a/atharva_theme_general/views/header_footer_template.xml
+++ b/atharva_theme_general/views/header_footer_template.xml
@@ -2222,7 +2222,7 @@
                                                 </a>
                                             </li>
                                         </t>
-                                        
+
                                         <t t-set="url_return" t-value="quote_plus(url_for('', '[lang]') + '?' + keep_query())"/>
                                         <li>
                                             <a class="d-none d-sm-block" t-attf-href="/web#action=base.action_view_base_language_install&amp;website_id=#{website.id if website else ''}&amp;url_return=#{url_return}">
@@ -2324,7 +2324,7 @@
                             <div class="ht-left d-none d-md-block">
                                 <!-- Links -->
                                 <ul class="nav ht-link">
-                                    <li><i class="fa fa-phone"></i> +974 45654789</li>
+<!--                                     <li><i class="fa fa-phone"></i> +974 45654789</li> -->
                                     <li><i class="fa fa-envelope"></i> support@pharmacyandmore.com </li>
                                 </ul>
                                 <!-- End Links -->
@@ -2368,7 +2368,7 @@
                     <div class="container">
                         <div class="row align-items-center">
                             <!-- logo -->
-                            <div class="col-12 col-md-4 col-lg-3">
+                            <div class="col-12 col-md-4 col-lg-4">
                                 <div class="logo">
                                     <a href="/" class="navbar-brand">
                                         <span t-field="website.logo" t-options="{'widget': 'image'}" t-att-alt="'Logo of %s' % website.name" t-att-title="website.name" />
@@ -2376,7 +2376,7 @@
                                 </div>
                             </div>
                             <!-- End logo -->
-                            <div class="col-12 col-md-4 col-lg-5">
+                            <div class="col-12 col-md-4 col-lg-4">
                                 <!-- search -->
                                 <div class="h-search">
                                     <i class="ti-search search_open hc-icon"></i>
@@ -2386,11 +2386,11 @@
                                 </div>
                                 <!-- End search -->
                             </div>
-                            <div class="col-12 col-md-1 col-lg-1">
+                            <div class="col-12 col-md-2 col-lg-2">
                                 <div class="mh-right d-flex justify-content-md-start">
                                     <!--Upload-->
                                     <div id="my_upload" class="h-col h-upload">
-                                        <a href ="#" class ="button">Upload Prescription</a>
+                                        <a href ="/upload-prescription" class ="button">Upload Prescription</a>
                                     </div>
                                     <!--End Upload-->
                                 </div>
@@ -4307,7 +4307,7 @@
                                                 </li>
                                                 <li>
                                                     <i class="fa fa-map-marker"/>
-                                                    <a href="/stores">Store Locator</a>
+                                                    <a href="/store-locator">Store Locator</a>
                                                 </li>
                                             </ul>
                                         </div>
